@@ -1,3 +1,8 @@
+2005-10-19 Christian Hergert <christian.hergert@gmail.com>
+
+	* MonoDevelop.SourceEditor/SourceViewService.cs: Check for a valid source
+	languages manager before persisting settings to file.
+
 2005-10-18 John Luke <john.luke@gmail.com> 
 
 	* MonoDevelop.SourceEditor.Gui/SourceEditorView.cs:
